fix: harden phase4 story context runtime state